--- a/po/cy_GB/menu.po
+++ b/po/cy_GB/menu.po
@@ -8,9 +8,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-19 17:41+0000\n"
-"Last-Translator: Robin Farrar <hogyndrwg@gmail.com>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:10+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Welsh (United Kingdom) (http://www.transifex.com/civicrm/civicrm/language/cy_GB/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -127,8 +127,8 @@ msgid "Case Activity"
 msgstr "Gweigaredd Achos"
 
 msgctxt "menu"
-msgid "Case Report"
-msgstr "Adroddiad Achos"
+msgid "Case Activity Audit"
+msgstr ""
 
 msgctxt "menu"
 msgid "Case Custom Set"
@@ -147,7 +147,7 @@ msgid "Assign to Another Client"
 msgstr "Trosglwyddo i Gleiant Arall"
 
 msgctxt "menu"
-msgid "Build Activity To Case"
+msgid "File on Case"
 msgstr ""
 
 msgctxt "menu"
@@ -172,10 +172,6 @@ msgstr "Statwsau Achos"
 msgctxt "menu"
 msgid "Encounter Mediums"
 msgstr ""
-
-msgctxt "menu"
-msgid "Change Activity Status"
-msgstr "Newid Statws Gweithgaredd"
 
 msgctxt "menu"
 msgid "CiviContribute Dashboard"
@@ -250,6 +246,10 @@ msgctxt "menu"
 msgid "Financial Types"
 msgstr "Mathau Ariannol"
 
+msgctxt "menu"
+msgid "New Payment"
+msgstr "Taliad Newydd"
+
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Financial Accounts"
@@ -267,9 +267,15 @@ msgstr "Cardiau Credyd Derbyniol"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Soft Credit Types"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Contributions"
 msgstr "Cyfraniadau"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Recurring Contributions"
 msgstr ""
@@ -320,6 +326,23 @@ msgstr ""
 msgctxt "menu"
 msgid "Accounting Batch Export"
 msgstr ""
+
+msgctxt "menu"
+msgid "View Payment"
+msgstr "Gweld Taliad"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "CiviContribute Component Settings"
+msgstr ""
+
+msgctxt "menu"
+msgid "PDF Invoice"
+msgstr "Anfoneb PDF"
+
+msgctxt "menu"
+msgid "Email Invoice"
+msgstr "Anfoneb Ebost"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -473,6 +496,11 @@ msgstr "Dewisiadau Chwilio"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Date Preferences"
+msgstr "Dewisiadau Dyddiad"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Navigation Menu"
 msgstr "Dewislen Llywio"
 
@@ -506,10 +534,6 @@ msgctxt "menu"
 msgid "Schedule Reminders"
 msgstr "Atgoffebion Amserlen"
 
-msgctxt "menu"
-msgid "This should never be seen"
-msgstr "Dylai hwn byth cael ei weld"
-
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Preferred Communication Methods"
@@ -527,6 +551,11 @@ msgstr "Fformatau Argraffu Tudalen (PDF)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Communication Style Options"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Email Greeting Formats"
 msgstr "Fformat Cyfarchion Ebost"
 
@@ -540,9 +569,10 @@ msgctxt "menu"
 msgid "Addressee Formats"
 msgstr "Fformat Cyfeiriadau"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Location"
-msgstr "Ieithoedd, Arian, Lleoliad"
+msgid "Languages, Currency, Locations"
+msgstr "Ieithoedd, Arian, Lleoliadau"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -693,10 +723,6 @@ msgid "Administer CiviCRM"
 msgstr "Gweinyddu CiviCRM"
 
 msgctxt "menu"
-msgid "Option Values"
-msgstr ""
-
-msgctxt "menu"
 msgid "Price Sets"
 msgstr "Setiau Prisiau"
 
@@ -764,10 +790,6 @@ msgstr ""
 msgctxt "menu"
 msgid "Custom Searches"
 msgstr ""
-
-msgctxt "menu"
-msgid "Simple Search"
-msgstr "Chwiliad Syml"
 
 msgctxt "menu"
 msgid "New Contact"
@@ -859,6 +881,10 @@ msgid "CiviCRM Blog"
 msgstr "Blog CiviCRM"
 
 msgctxt "menu"
+msgid "CiviCRM Getting Started"
+msgstr ""
+
+msgctxt "menu"
 msgid "Case Dashlet"
 msgstr ""
 
@@ -913,6 +939,10 @@ msgid "Import Activities"
 msgstr "Mewnforio Gweithgareddau"
 
 msgctxt "menu"
+msgid "Import Multi-value Custom Data"
+msgstr ""
+
+msgctxt "menu"
 msgid "Upgrade CiviCRM"
 msgstr "Uwchraddio CiviCRM"
 
@@ -949,12 +979,16 @@ msgid "Browse Uploaded files"
 msgstr "Pori Ffeiliau wedi'i Uwchlwytho"
 
 msgctxt "menu"
-msgid "Delete file"
-msgstr "Dileu ffeil"
+msgid "Delete File"
+msgstr "Dileu Ffeil"
 
 msgctxt "menu"
 msgid "Log out"
 msgstr "Allgofnodi"
+
+msgctxt "menu"
+msgid "CiviCRM API"
+msgstr "API CiviCRM"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -968,6 +1002,10 @@ msgstr ""
 msgctxt "menu"
 msgid "ProfileEditor"
 msgstr ""
+
+msgctxt "menu"
+msgid "Confirm dates"
+msgstr "Cadarnhau dyddiadau"
 
 msgctxt "menu"
 msgid "CiviCRM Profile Create"
@@ -1064,6 +1102,10 @@ msgid "Event Online Registration"
 msgstr "Cofrestriad Digwyddiad Arlein"
 
 msgctxt "menu"
+msgid "Repeat Event"
+msgstr "Ailadrodd Digwyddiad"
+
+msgctxt "menu"
 msgid "Conference Slots"
 msgstr "Slotiau Cynhadledd"
 
@@ -1097,6 +1139,10 @@ msgstr "Tynnu o'r Cert"
 msgctxt "menu"
 msgid "View Cart"
 msgstr "Gweld Siart"
+
+msgctxt "menu"
+msgid "Change Registration Selections"
+msgstr "Newid Dewisiadau Cofrestu"
 
 msgctxt "menu"
 msgid "CiviGrant Dashboard"
@@ -1151,8 +1197,8 @@ msgid "Resubscribe"
 msgstr "Ail-tanysgrifio"
 
 msgctxt "menu"
-msgid "Optout"
-msgstr ""
+msgid "Opt-out"
+msgstr "Eithrio"
 
 msgctxt "menu"
 msgid "Confirm"
@@ -1287,6 +1333,11 @@ msgstr "Rhestr Adroddiadau"
 msgctxt "menu"
 msgid "CiviCRM News"
 msgstr "Newyddion CiviCRM"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Getting Started"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1425,6 +1476,16 @@ msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "New A/B Test"
+msgstr "Prawf A/B Newydd"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Manage A/B Tests"
+msgstr "Rheoli Profion A/B"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Reports"
 msgstr "Adroddiadau Aelodaeth"
 
@@ -1530,11 +1591,6 @@ msgstr "Lleoleiddiad"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Locations"
-msgstr "Ieithoedd, Arian, Lleoliadau"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
 msgid "Preferred Language Options"
 msgstr ""
 
@@ -1552,6 +1608,11 @@ msgstr ""
 msgctxt "menu"
 msgid "System Settings"
 msgstr "Gosodiadau System"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Connections"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1620,6 +1681,11 @@ msgstr "CiviGrant"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Grant Status"
+msgstr "Statws Grant"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "CiviMember"
 msgstr "CiviMember"
 
@@ -1630,8 +1696,13 @@ msgstr "Pob Adroddiad"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Help"
-msgstr "Cymorth"
+msgid "Support"
+msgstr "Cefnogaeth"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Get started"
+msgstr "Dechrau arni"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1640,18 +1711,43 @@ msgstr "Dogfennaeth"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Community Forums"
-msgstr "Fforymau Cymuned"
+msgid "Ask a question"
+msgstr "Gofyn cwestiwn"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Participate"
-msgstr "Cyfranogi"
+msgid "Get expert help"
+msgstr "Cael cymorth arbenigol"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "About"
-msgstr "Ynghylch"
+msgid "About CiviCRM"
+msgstr "Ynglŷn â CiviCRM"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Register your site"
+msgstr "Cofrestru eich safle"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Join CiviCRM"
+msgstr "Ymuno â CiviCRM"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer"
+msgstr "Datblygwr"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "API Explorer"
+msgstr "Porwr API"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer Docs"
+msgstr "Dogfennau Datblygwr"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1878,6 +1974,11 @@ msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Provides information about the status of recurring contributions"
+msgstr "Darparu gwybodaeth ynghylch statws cyfraniadau mynych"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Summary"
 msgstr "Crynodeb Aelodaeth"
 
@@ -2047,144 +2148,69 @@ msgid ""
 "Detailed report for canvassing, phone-banking, walk lists or other surveys."
 msgstr ""
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Case Activity Audit"
+msgid "Payment Methods"
 msgstr ""
 
 msgctxt "menu"
-msgid "New Payment"
-msgstr "Taliad Newydd"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Soft Credit Types"
+msgid "Configure CKEditor"
 msgstr ""
 
 msgctxt "menu"
-msgid "View Payment"
-msgstr "Gweld Taliad"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Communication Style Options"
+msgid "Batch Merge Duplicate Contacts"
 msgstr ""
 
 msgctxt "menu"
-msgid "Import Multi-value Custom Data"
+msgid "Insert CiviCRM Content"
 msgstr ""
 
 msgctxt "menu"
-msgid "Change Registration Selections"
-msgstr "Newid Dewisiadau Cofrestu"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Grant Status"
-msgstr "Statws Grant"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Developer"
-msgstr "Datblygwr"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "API Explorer"
-msgstr "Porwr API"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Developer Docs"
-msgstr "Dogfennau Datblygwr"
+msgid "Self-service Registration Update"
+msgstr ""
 
 msgctxt "menu"
-msgid "File on Case"
+msgid "Self-service Registration Transfer"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "CiviContribute Component Settings"
+msgid "System Status"
 msgstr ""
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "PDF Invoice"
-msgstr "Anfoneb PDF"
-
-msgctxt "menu"
-msgid "Email Invoice"
-msgstr "Anfoneb Ebost"
+msgid "Components"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Date Preferences"
-msgstr "Dewisiadau Dyddiad"
-
-msgctxt "menu"
-msgid "Delete File"
-msgstr "Dileu Ffeil"
-
-msgctxt "menu"
-msgid "CiviCRM API"
-msgstr "API CiviCRM"
-
-msgctxt "menu"
-msgid "Confirm dates"
-msgstr "Cadarnhau dyddiadau"
-
-msgctxt "menu"
-msgid "Repeat Event"
-msgstr "Ailadrodd Digwyddiad"
-
-msgctxt "menu"
-msgid "Opt-out"
-msgstr "Eithrio"
+msgid "Extensions"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "New A/B Test"
-msgstr "Prawf A/B Newydd"
+msgid "Activity Details"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Manage A/B Tests"
-msgstr "Rheoli Profion A/B"
+msgid "Activity Summary"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Support"
-msgstr "Cefnogaeth"
+msgid "Shows activity statistics by type / date"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Get started"
-msgstr "Dechrau arni"
+msgid "Pledge Detail"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Ask a question"
-msgstr "Gofyn cwestiwn"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Get expert help"
-msgstr "Cael cymorth arbenigol"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "About CiviCRM"
-msgstr "Ynglŷn â CiviCRM"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Register your site"
-msgstr "Cofrestru eich safle"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Join CiviCRM"
-msgstr "Ymuno â CiviCRM"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Provides information about the status of recurring contributions"
-msgstr "Darparu gwybodaeth ynghylch statws cyfraniadau mynych"
+msgid ""
+"List of pledges including amount pledged, pledge status, next payment date, "
+"balance due, total amount paid etc."
+msgstr ""
