--- a/po/da_DK/grant.po
+++ b/po/da_DK/grant.po
@@ -10,10 +10,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-04-25 16:54-0400\n"
-"PO-Revision-Date: 2015-06-08 05:19+0000\n"
-"Last-Translator: Aputsiaĸ Niels Janussen <aj@isit.gl>\n"
-"Language-Team: Danish (http://www.transifex.com/projects/p/civicrm/language/da/)\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:09+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"Language-Team: Danish (http://www.transifex.com/civicrm/civicrm/language/da/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -39,14 +39,6 @@ msgstr "Bevillingens udbetalingsfrist er NULL"
 #: CRM/Grant/BAO/Query.php
 msgid "Grant Decision Date is NULL"
 msgstr "Bevillingens beslutningsdato er NULL"
-
-#: CRM/Grant/BAO/Query.php
-msgid "Grant Type %2 %1"
-msgstr "Bevillingstype %2 %1"
-
-#: CRM/Grant/BAO/Query.php
-msgid "Grant Status %2 %1"
-msgstr "Bevillingens status %2 %1"
 
 #: CRM/Grant/BAO/Query.php
 msgid "App. Received Date - From"
@@ -93,10 +85,6 @@ msgid "Grant report received"
 msgstr "Rapport om modtagne bevillinger"
 
 #: CRM/Grant/DAO/Grant.php
-msgid "Grant Type Id"
-msgstr "ID for bevillingstype"
-
-#: CRM/Grant/DAO/Grant.php
 msgid "Amount granted"
 msgstr "Bevilliget beløb"
 
@@ -108,10 +96,6 @@ msgstr "Valuta på bevilling"
 msgid "Grant Rationale"
 msgstr "Rationale for bevilling"
 
-#: CRM/Grant/DAO/Grant.php
-msgid "Grant Status Id"
-msgstr "ID for status på bevilling"
-
 #: CRM/Grant/Form/Grant.php templates/CRM/Grant/Form/GrantView.tpl
 msgid "Grant Report Received?"
 msgstr "Er bevillingsrapport blevet modtaget?"
@@ -119,6 +103,10 @@ msgstr "Er bevillingsrapport blevet modtaget?"
 #: CRM/Grant/Form/Grant.php
 msgid "Amount Requested<br />(original currency)"
 msgstr "Ansøgt sum<br/>(original valuta)"
+
+#: CRM/Grant/Form/Grant.php
+msgid "Applicant"
+msgstr "Ansøger"
 
 #: CRM/Grant/Form/Search.php
 msgid "Find Grants"
@@ -129,12 +117,10 @@ msgid "Delete Grants"
 msgstr "Slet bevilling"
 
 #: CRM/Grant/Form/Task/Delete.php
-msgid "Deleted Grant(s): %1"
-msgstr "Slet bevilling(er): %1"
-
-#: CRM/Grant/Form/Task/Delete.php CRM/Grant/Form/Task/Update.php
-msgid "Total Selected Grant(s): %1"
-msgstr "Sum for markeret bevilling(er): %1"
+msgid "%count grant deleted."
+msgid_plural "%count grants deleted."
+msgstr[0] "%count bevilling blev slettet."
+msgstr[1] "%count bevillinger blev slettet."
 
 #: CRM/Grant/Form/Task/Print.php
 msgid "Print Grant List"
@@ -145,30 +131,46 @@ msgid "Update Grants"
 msgstr "Opdatér bevillinger"
 
 #: CRM/Grant/Form/Task/Update.php
-msgid "Updated Grant(s): %1"
-msgstr "Opdaterede bevilling(er): %1"
+msgid "Updated Grant(s): %1 (Total Selected: %2)"
+msgstr "Opdaterede bevilling(er): %1 (valgt i alt: %2)"
+
+#: CRM/Grant/Info.php
+msgid "access CiviGrant"
+msgstr "gå til CiviBevilling"
+
+#: CRM/Grant/Info.php
+msgid "View all grants"
+msgstr "Vis alle bevillinger"
+
+#: CRM/Grant/Info.php
+msgid "edit grants"
+msgstr "redigér bevillinger"
+
+#: CRM/Grant/Info.php
+msgid "Create and update grants"
+msgstr "Opret og opdatér bevillinger"
+
+#: CRM/Grant/Info.php
+msgid "delete in CiviGrant"
+msgstr "slet i CiviBevilling"
+
+#: CRM/Grant/Info.php
+msgid "Delete grants"
+msgstr "Slet bevillinger"
 
 #: CRM/Grant/Page/DashBoard.php
 msgid "grants"
 msgstr "bevillinger"
 
-#: CRM/Grant/Page/Tab.php
-msgid "Grant by"
-msgstr "Bevilling fra"
-
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/GrantView.tpl
+#: CRM/Grant/Selector/Search.php
 msgid "View Grant"
 msgstr "Vis bevilling"
 
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/Grant.tpl
+#: CRM/Grant/Selector/Search.php
 msgid "Edit Grant"
 msgstr "Redigér bevilling"
 
 #: CRM/Grant/Selector/Search.php
-msgid "Are you sure you want to delete this grant?"
-msgstr "Er du sikker på at du vil slette denne bevilling?"
-
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/Grant.tpl
 msgid "Delete Grant"
 msgstr "Slet bevilling"
 
@@ -181,16 +183,8 @@ msgid "Granted"
 msgstr "Bevilliget"
 
 #: CRM/Grant/Task.php
-msgid "Print Grants"
-msgstr "Udskriv bevillinger"
-
-#: CRM/Grant/Task.php
 msgid "Export Grants"
 msgstr "Eksportér bevillinger"
-
-#: templates/CRM/Grant/Form/Grant.tpl
-msgid "New Grant"
-msgstr "Ny bevilling"
 
 #: templates/CRM/Grant/Form/Grant.tpl
 msgid "Are you sure you want to delete this Grant?"
@@ -211,6 +205,14 @@ msgstr "Dato hvorpå det bevilligede beløb blev overført."
 #: templates/CRM/Grant/Form/GrantView.tpl
 msgid "(original currency)"
 msgstr "(original valuta)"
+
+#: templates/CRM/Grant/Form/Search/Common.tpl
+msgid "Grant Status(s)"
+msgstr "Bevillingsstatus(ser)"
+
+#: templates/CRM/Grant/Form/Search/Common.tpl
+msgid "Grant Type(s)"
+msgstr "Bevillingstype(r)"
 
 #: templates/CRM/Grant/Form/Search/Common.tpl
 msgid "Date is not set"
@@ -304,61 +306,17 @@ msgid "This page lists all grants for %1 since inception."
 msgstr "Denne side viser alle bevillinger for %1 siden opstarten."
 
 #: templates/CRM/Grant/Page/Tab.tpl
-msgid ""
-"Click <a accesskey='N' href='%1'>Add Grant</a> to record a Grant for this "
-"contact."
-msgstr "Tryk <a accesskey=\"N\" href='%1'>Tilføj bevilling</a> for at tilknytte en bevilling til denne kontaktperson."
+msgid "Click <a %1>Add Grant</a> to record a Grant for this contact."
+msgstr "Tryk <a %1>Tilføj bevilling</a> for at registrere en bevilling for denne kontakt."
 
 #: templates/CRM/Grant/Page/Tab.tpl
 msgid "No grants have been recorded for this contact."
 msgstr "Der er ingen bevillinger knyttet til denne kontaktperson."
 
-#: CRM/Grant/Form/Grant.php
-msgid "Applicant"
-msgstr "Ansøger"
+#: CRM/Grant/Task.php
+msgid "Export grants"
+msgstr ""
 
-#: CRM/Grant/Form/Task/Update.php
-msgid "Updated Grant(s): %1 (Total Selected: %2)"
-msgstr "Opdaterede bevilling(er): %1 (valgt i alt: %2)"
-
-#: templates/CRM/Grant/Page/Tab.tpl
-msgid "Click <a %1>Add Grant</a> to record a Grant for this contact."
-msgstr "Tryk <a %1>Tilføj bevilling</a> for at registrere en bevilling for denne kontakt."
-
-#: CRM/Grant/Form/Task/Delete.php
-msgid "%count grant deleted."
-msgid_plural "%count grants deleted."
-msgstr[0] "%count bevilling blev slettet."
-msgstr[1] "%count bevillinger blev slettet."
-
-#: CRM/Grant/Info.php
-msgid "access CiviGrant"
-msgstr "gå til CiviBevilling"
-
-#: CRM/Grant/Info.php
-msgid "View all grants"
-msgstr "Vis alle bevillinger"
-
-#: CRM/Grant/Info.php
-msgid "edit grants"
-msgstr "redigér bevillinger"
-
-#: CRM/Grant/Info.php
-msgid "Create and update grants"
-msgstr "Opret og opdatér bevillinger"
-
-#: CRM/Grant/Info.php
-msgid "delete in CiviGrant"
-msgstr "slet i CiviBevilling"
-
-#: CRM/Grant/Info.php
-msgid "Delete grants"
-msgstr "Slet bevillinger"
-
-#: templates/CRM/Grant/Form/Search/Common.tpl
-msgid "Grant Status(s)"
-msgstr "Bevillingsstatus(ser)"
-
-#: templates/CRM/Grant/Form/Search/Common.tpl
-msgid "Grant Type(s)"
-msgstr "Bevillingstype(r)"
+#: CRM/Grant/Task.php
+msgid "Update grants"
+msgstr ""
