--- a/po/es_MX/extension.po
+++ b/po/es_MX/extension.po
@@ -8,9 +8,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-04-01 22:22+0000\n"
-"Last-Translator: Juana Martinez <juanams2000@hotmail.com>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Spanish (Mexico) (http://www.transifex.com/civicrm/civicrm/language/es_MX/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -26,11 +26,6 @@ msgstr "El directorio no se puede escribir"
 msgid ""
 "Your extensions cache directory (%1) is not web server writable. Please go "
 "to the <a href=\"%2\">path setting page</a> and correct it.<br/>"
-msgstr ""
-
-#: CRM/Extension/Browser.php
-msgid ""
-"Not checking remote URL for extensions since ext_repo_url is set to false."
 msgstr ""
 
 #: CRM/Extension/Browser.php
@@ -53,10 +48,6 @@ msgid ""
 "compatible, you may be able to <a href=\"%3\">download and install "
 "extensions manually</a> (depending on access to your web server).<br />"
 msgstr "No hay actualmente extensiones en el directorio de extensiones publicas de CiviCRM que sean compatibles con la version %2 (<a href=\"%1\">extensiones solicitadas desde aqui</a>). Si usted quiere instalar una extension que no sea compatible aun, puedes <a href=\"%3\"> descargar e instalar extensiones manualmente</a>(dependiendo de su acceso al servidor de internet).<br />"
-
-#: CRM/Extension/Browser.php
-msgid "No Extensions Available for this Version"
-msgstr "No hay extensiones disponibles para esta version"
 
 #: CRM/Extension/Container/Basic.php CRM/Extension/Container/Default.php
 msgid "Invalid Base Directory"
@@ -114,6 +105,13 @@ msgid ""
 msgstr "No podrá instalar extensiones en este momento porque su instalación de PHP no soporta archivos ZIP. Por favor, pregunte a su administrador de sistemas que instale la extension estándar PHP-ZIP"
 
 #: CRM/Extension/Downloader.php
+msgid ""
+"WARNING: The downloader may be unable to download files which require HTTP "
+"redirection. This may be a configuration issue with PHP's open_basedir or "
+"safe_mode."
+msgstr ""
+
+#: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension: bad directory structure"
 msgstr "Imposible de extraer la extension: erronea estructura de directorio"
 
@@ -157,9 +155,13 @@ msgid ""
 "will be preserved, but the new copy will be used."
 msgstr "Una copia de la extension (1%) se encuentra en una carpeta del sistema (2%). La copia de sistema será preservada, pero una nueva copia será usada"
 
-#: CRM/Extension/Downloader.php
+#: CRM/Extension/Manager.php
+msgid "Selected option value has been deleted."
+msgstr ""
+
+#: CRM/Extension/Browser.php
 msgid ""
-"WARNING: The downloader may be unable to download files which require HTTP "
-"redirection. This may be a configuration issue with PHP's open_basedir or "
-"safe_mode."
+"The CiviCRM public extensions directory at %1 could not be contacted - "
+"please check your webserver can make external HTTP requests or contact "
+"CiviCRM team on <a href=\"http://forum.civicrm.org/\">CiviCRM forum</a>."
 msgstr ""
